[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cfr"
version = "2025.7.28"
description = "cfr: a Python package for Climate Field Reconstruction"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD 3-Clause" }
authors = [
    { name = "Feng Zhu",          email = "fengzhu@ucar.edu" },
    { name = "Julien Emile-Geay", email = "julieneg@usc.edu" },
]
keywords = ["climate", "field", "reconstruction", "paleoclimate", "data assimilation"]
classifiers = [
    "Natural Language :: English",
    "License :: OSI Approved :: BSD Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.11"
dependencies = [
    "colorama",
    "seaborn",
    "pandas",
    "tqdm",
    "xarray",
    "netCDF4",
    "nc-time-axis",
    "dask",
    "statsmodels",
    "eofs",
    "plotly",
    "pyresample",
]

[project.optional-dependencies]
psm = [
    "pathos",
    "fbm",
]
ml = [
    "scikit-learn",
    "torch",
    "torchvision",
]
graphem = [
    "cython",
    "scikit-learn",
    "cfr-graphem",
]

[project.urls]
Homepage = "https://github.com/LinkedEarth/cfrLE"

[project.scripts]
cfr = "cfr._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfr*"]
